--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,16 @@
     "@cloudinary/react": "^1.13.0",
     "@cloudinary/url-gen": "^1.19.0",
     "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
     "framer-motion": "^11.2.9",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-loading-skeleton": "^3.4.0",
     "react-router-dom": "^6.22.0",
-    "react-spinners": "^0.13.8"
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
