--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-lazy-load-image-component": "^1.6.0",
+    "react-loader-spinner": "^6.1.6",
     "react-loading-skeleton": "^3.4.0",
     "react-router-dom": "^6.22.0",
     "react-spinners": "^0.13.8",
