--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@cloudinary/react": "^1.13.0",
     "@cloudinary/url-gen": "^1.19.0",
+    "@lottiefiles/dotlottie-react": "^0.7.0",
     "@reduxjs/toolkit": "^2.2.5",
+    "@stripe/react-stripe-js": "^2.7.2",
+    "@stripe/stripe-js": "^4.0.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.2.9",
@@ -23,6 +26,7 @@
     "react-lazy-load-image-component": "^1.6.0",
     "react-loader-spinner": "^6.1.6",
     "react-loading-skeleton": "^3.4.0",
+    "react-lottie": "^1.2.4",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.0",
     "react-spinners": "^0.13.8",
