--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.1.2",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "stripe": "^16.1.0"
   }
 }
