--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ PORT=4000
 MONGO_DB=mongodb+srv://rayen08yako:AjXThnWIsbdxOUbJ@cluster0.suugocn.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=123_secret*key_321
 STRIPE_SECRET_KEY=123
+
+EMAIL_USER=rayen08yako@gmail.com
+EMAIL_PASS=nygm kyyd lbrg nnlv
+
